--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -28,5 +28,5 @@ jobs:
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add .
-          git commit --author=github-actions[bot] -m 'generated'
+          git commit --author=. -m 'generated'
           git push
