update some setting and add repository_dispatch

--- a/.github/workflows/generate_article_written.yml
+++ b/.github/workflows/generate_article_written.yml
@@ -1,6 +1,6 @@
-name: Generate all articles
+name: Generate all articles when article is renewed
 on:
-  - push
+  - repository_dispatch
 
 jobs:
   generate:
