--- a/.github/workflows/generate_article_update.yml
+++ b/.github/workflows/generate_article_update.yml
@@ -1,4 +1,4 @@
-name: Generate all articles when article is renewed
+name: Generate all articles when article is updated
 on:
   - repository_dispatch
 
@@ -14,6 +14,10 @@ jobs:
         with:
           go-version: '>=1.19.3'
           cache: false
+      - name: Event display
+        run: |
+          echo ${{github.event.client_payload.type}}
+          echo ${{github.event.client_payload.id}}
       - name: Install microblogen
         run: GOBIN=$(pwd) GOPRIVATE="github.com/Qman11010101/microblogen" go install github.com/Qman11010101/microblogen@latest
       - run: ls -la
