--- a/.github/workflows/generate_article_update.yml
+++ b/.github/workflows/generate_article_update.yml
@@ -7,25 +7,42 @@ jobs:
     name: articles-generate-all
     runs-on: ubuntu-latest
     steps:
+      - name: Check API endpoint
+        id: endpoint
+        run: |
+          if [ ${{github.event.client_payload.api}} = "article" ]; then
+            exit 0
+          else
+            exit 1
+          fi
+        continue-on-error: true
+      # Endpoint が article でない(category とか)ときは何もしない
+      # Endpoint が article だったときの処理
       - uses: actions/checkout@v3
         with:
             ref: ${{ github.head_ref }}
+        if: steps.endpoint.outcome == 'success'
       - uses: actions/setup-go@v3
         with:
           go-version: '>=1.19.3'
           cache: false
+        if: steps.endpoint.outcome == 'success'
       - name: Event display
         run: |
           echo ${{github.event.client_payload.type}}
           echo ${{github.event.client_payload.id}}
+        if: steps.endpoint.outcome == 'success'
       - name: Install microblogen
         run: GOBIN=$(pwd) GOPRIVATE="github.com/Qman11010101/microblogen" go install github.com/Qman11010101/microblogen@latest
+        if: steps.endpoint.outcome == 'success'
       - run: ls -la
+        if: steps.endpoint.outcome == 'success'
       - name: run microblogen
         run: $(pwd)/microblogen
         env:
           MICROCMS_API_KEY: ${{ secrets.MICROCMS_API_KEY }}
           SERVICE_DOMAIN: ${{ secrets.SERVICE_DOMAIN }}
+        if: steps.endpoint.outcome == 'success'
       - name: Commit & Push
         run: |
           set -x
@@ -34,3 +51,4 @@ jobs:
           git add .
           git commit --author=. -m 'generated'
           git push
+        if: steps.endpoint.outcome == 'success'
