--- a/.github/workflows/generate_push.yml
+++ b/.github/workflows/generate_push.yml
@@ -15,7 +15,7 @@ jobs:
           go-version: '>=1.19.3'
           cache: false
       - name: Install microblogen
-        run: GOBIN=$(pwd) GOPRIVATE="github.com/Qman11010101/microblogen" go install github.com/Qman11010101/microblogen@latest
+        run: GOBIN=$(pwd) GOPRIVATE="github.com/Qman11010101/microblogen" go install github.com/Qman11010101/microblogen@v0.2
       - run: ls -la
       - name: run microblogen
         run: $(pwd)/microblogen
