--- a/.github/workflows/generate_article_update.yml
+++ b/.github/workflows/generate_article_update.yml
@@ -12,8 +12,8 @@ jobs:
             ref: ${{ github.head_ref }}
       - uses: actions/setup-go@v3
         with:
-          go-version: '>=1.19.3'
-          cache: false
+          go-version-file: ./go.mod
+          cache: true
       - name: Event display
         run: |
           echo ${{github.event.client_payload.type}}
