--- a/.github/workflows/generate_article_update.yml
+++ b/.github/workflows/generate_article_update.yml
@@ -12,7 +12,7 @@ jobs:
             ref: ${{ github.head_ref }}
       - uses: actions/setup-go@v3
         with:
-          go-version-file: ./go.mod
+          go-version: '>=1.19.3'
           cache: true
       - name: Event display
         run: |
