--- a/.github/workflows/generate_push.yml
+++ b/.github/workflows/generate_push.yml
@@ -12,7 +12,7 @@ jobs:
             ref: ${{ github.head_ref }}
       - uses: actions/setup-go@v3
         with:
-          go-version-file: ./go.mod
+          go-version: '>=1.19.3'
           cache: true
       - name: Install microblogen
         run: GOBIN=$(pwd) GOPRIVATE="github.com/Qman11010101/microblogen" go install github.com/Qman11010101/microblogen@latest
