--- a/.github/workflows/generate_article_update.yml
+++ b/.github/workflows/generate_article_update.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: '>=1.19.3'
-          cache: true
+          cache: false
       - name: Event display
         run: |
           echo ${{github.event.client_payload.type}}
