--- a/.github/workflows/generate_push.yml
+++ b/.github/workflows/generate_push.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: '>=1.19.3'
-          cache: true
+          cache: false
       - name: Install microblogen
         run: GOBIN=$(pwd) GOPRIVATE="github.com/Qman11010101/microblogen" go install github.com/Qman11010101/microblogen@latest
       - run: ls -la
