--- a/.github/workflows/generate_article_update.yml
+++ b/.github/workflows/generate_article_update.yml
@@ -42,6 +42,7 @@ jobs:
         with:
           python-version: "3.11"
       - name: Tweet
+        if: github.event.client_payload.type == 'new'
         run: |
           pip install requests requests_oauthlib
-          python .github/workflows/tweet.py ${{secrets.X_API_KEY}} ${{secrets.X_API_SECRET_KEY}} ${{secrets.ACCESS_TOKEN}} ${{secrets.ACCESS_TOKEN_SECRET}} ${{github.event.client_payload.id}} ${{github.event.client_payload.contents.new.title}}
+          python .github/workflows/tweet.py ${{secrets.X_API_KEY}} ${{secrets.X_API_SECRET_KEY}} ${{secrets.X_ACCESS_TOKEN}} ${{secrets.X_ACCESS_TOKEN_SECRET}} ${{github.event.client_payload.id}} ${{github.event.client_payload.contents.new.title}}
