--- a/.github/workflows/generate_article_update.yml
+++ b/.github/workflows/generate_article_update.yml
@@ -48,6 +48,6 @@ jobs:
           python .github/workflows/tweet.py ${{github.event.client_payload.id}} ${{github.event.client_payload.contents.new.title}}
         env:
           X_API_KEY: ${{ secrets.X_API_KEY }}
-          X_API_SECRET_KEY: ${{ secrets.X_API_SECRET_KEY }}
+          X_API_KEY_SECRET: ${{ secrets.X_API_SECRET_KEY }}
           X_ACCESS_TOKEN: ${{ secrets.X_ACCESS_TOKEN }}
           X_ACCESS_TOKEN_SECRET: ${{ secrets.X_ACCESS_TOKEN_SECRET }}
