--- a/.github/workflows/generate_article_update.yml
+++ b/.github/workflows/generate_article_update.yml
@@ -45,9 +45,11 @@ jobs:
         if: github.event.client_payload.type == 'new' || github.event.client_payload.type == 'edit'
         run: |
           pip install requests requests_oauthlib
-          python .github/workflows/tweet.py ${{github.event.client_payload.id}} ${{github.event.client_payload.contents.new.title}}
+          python .github/workflows/tweet.py
         env:
           X_API_KEY: ${{ secrets.X_API_KEY }}
           X_API_KEY_SECRET: ${{ secrets.X_API_SECRET_KEY }}
           X_ACCESS_TOKEN: ${{ secrets.X_ACCESS_TOKEN }}
           X_ACCESS_TOKEN_SECRET: ${{ secrets.X_ACCESS_TOKEN_SECRET }}
+          ID: ${{github.event.client_payload.id}}
+          TITLE: ${{github.event.client_payload.contents.new.title}}
