--- a/.github/workflows/generate_article_update.yml
+++ b/.github/workflows/generate_article_update.yml
@@ -52,4 +52,4 @@ jobs:
           X_ACCESS_TOKEN: ${{ secrets.X_ACCESS_TOKEN }}
           X_ACCESS_TOKEN_SECRET: ${{ secrets.X_ACCESS_TOKEN_SECRET }}
           ID: ${{github.event.client_payload.id}}
-          TITLE: ${{github.event.client_payload.contents.new.title}}
+          TITLE: ${{github.event.client_payload.contents.new.publishValue.title}}
