--- a/.github/workflows/generate_article_update.yml
+++ b/.github/workflows/generate_article_update.yml
@@ -41,6 +41,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
+      - name: chk
+        run: |
+          echo ${{github.event.client_payload.contents.new.publishValue.title}}
       - name: Tweet
         if: github.event.client_payload.type == 'new' || github.event.client_payload.type == 'edit'
         run: |
