--- a/.github/workflows/generate_article_update.yml
+++ b/.github/workflows/generate_article_update.yml
@@ -43,7 +43,7 @@ jobs:
           python-version: "3.11"
       - name: check payload
         run: |
-          echo ${{github.event.client_payload}}
+          echo "payload: ${{ toJson(github.event.client_payload) }}"
       - name: Tweet
         if: github.event.client_payload.type == 'new' || github.event.client_payload.type == 'edit'
         run: |
