--- a/.github/workflows/generate_article_update.yml
+++ b/.github/workflows/generate_article_update.yml
@@ -41,9 +41,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-      - name: get article title
-        run: |
-          echo TITLE=$(curl -X GET https://$SERVICE_DOMAIN.microcms.io/api/v1/articles/${{github.event.client_payload.id}}?fields=title -H "X-MICROCMS-API-KEY:$MICROCMS_API_KEY" | jq -r '.title') >> $GITHUB_ENV
       - name: Tweet
         if: github.event.client_payload.type == 'new' || github.event.client_payload.type == 'edit'
         run: |
@@ -55,4 +52,5 @@ jobs:
           X_ACCESS_TOKEN: ${{ secrets.X_ACCESS_TOKEN }}
           X_ACCESS_TOKEN_SECRET: ${{ secrets.X_ACCESS_TOKEN_SECRET }}
           ID: ${{github.event.client_payload.id}}
-          TITLE: ${{ env.TITLE }}
+          MICROCMS_API_KEY: ${{ secrets.MICROCMS_API_KEY }}
+          SERVICE_DOMAIN: ${{ secrets.SERVICE_DOMAIN }}
