--- a/.github/workflows/generate_push.yml
+++ b/.github/workflows/generate_push.yml
@@ -21,6 +21,7 @@ jobs:
         env:
           MICROCMS_API_KEY: ${{ secrets.MICROCMS_API_KEY }}
           SERVICE_DOMAIN: ${{ secrets.SERVICE_DOMAIN }}
+          TZ: Asia/Tokyo
       - name: remove microblogen binary
         run: rm microblogen
       - name: Commit & Push
