--- a/.github/workflows/generate_article_update.yml
+++ b/.github/workflows/generate_article_update.yml
@@ -26,7 +26,7 @@ jobs:
         env:
           MICROCMS_API_KEY: ${{ secrets.MICROCMS_API_KEY }}
           SERVICE_DOMAIN: ${{ secrets.SERVICE_DOMAIN }}
-          TZ: "Asia/Tokyo"
+          TIMEZONE: "Asia/Tokyo"
       - name: remove microblogen binary
         run: rm microblogen
       - name: Commit & Push
