--- a/.github/workflows/generate_push.yml
+++ b/.github/workflows/generate_push.yml
@@ -12,10 +12,8 @@ jobs:
             ref: ${{ github.head_ref }}
       - uses: actions/setup-go@v3
         with:
-          go-version: '>=1.19.3'
+          go-version: '>=1.23.0'
           cache: false
-      - name: Switch to Pages-Deploy branch
-        run: git checkout -b Pages-Deploy
       - name: Install microblogen
         run: GOBIN=$(pwd) GOPRIVATE="github.com/Qman11010101/microblogen" go install github.com/Qman11010101/microblogen@latest
       - name: run microblogen
@@ -33,4 +31,4 @@ jobs:
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add .
           git commit --author=. -m 'Automatically generated'
-          git push origin Pages-Deploy --force
+          git push
