--- a/.github/workflows/generate_article_update.yml
+++ b/.github/workflows/generate_article_update.yml
@@ -13,14 +13,12 @@ jobs:
           ref: ${{ github.head_ref }}
       - uses: actions/setup-go@v3
         with:
-          go-version: ">=1.19.3"
+          go-version: ">=1.23.0"
           cache: false
       - name: Event display
         run: |
           echo ${{github.event.client_payload.type}}
           echo ${{github.event.client_payload.id}}
-      - name: Switch to Pages-Deploy branch
-        run: git checkout -b Pages-Deploy
       - name: Install microblogen
         run: GOBIN=$(pwd) GOPRIVATE="github.com/Qman11010101/microblogen" go install github.com/Qman11010101/microblogen@latest
       - name: run microblogen
@@ -38,7 +36,7 @@ jobs:
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add .
           git commit --author=. -m 'Automatically generated'
-          git push origin Pages-Deploy --force
+          git push
       - name: Python environment
         if: github.event.client_payload.type == 'new' || github.event.client_payload.type == 'edit'
         uses: actions/setup-python@v4
