--- a/.github/workflows/generate_push.yml
+++ b/.github/workflows/generate_push.yml
@@ -1,6 +1,8 @@
 name: Generate all articles when template is renewed
 on:
-  - push
+  push:
+    branches:
+      - main
 
 jobs:
   generate:
@@ -29,6 +31,11 @@ jobs:
           set -x
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+          git fetch origin pages-prod || git branch pages-prod
+          git checkout -B pages-prod origin/pages-prod || git checkout -B pages-prod
+          git rm -rf .
+          cp -r output/* .
+          rm -rf output
           git add .
-          git commit --author=. -m 'Automatically generated'
-          git push
+          git commit -m "Deploy: $(date -u)"
+          git push origin pages-prod --force
