--- a/.github/workflows/generate_push.yml
+++ b/.github/workflows/generate_push.yml
@@ -1,8 +1,8 @@
-name: Generate all articles when something pushed to main
+name: Generate all articles when something pushed to preview
 on:
   push:
     branches:
-      - main
+      - preview
 
 jobs:
   generate:
@@ -15,8 +15,8 @@ jobs:
       - name: Change branch
         run: |
           set -x
-          git fetch origin pages-prod || git branch pages-prod
-          git checkout -B pages-prod origin/pages-prod || git checkout -B pages-prod
+          git fetch origin pages-prev || git branch pages-prev
+          git checkout -B pages-prev origin/pages-prev || git checkout -B pages-prev
       - uses: actions/setup-go@v5
         with:
           go-version: '>=1.23.0'
@@ -40,4 +40,4 @@ jobs:
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add .
           git commit -m "Deploy: $(date -u)"
-          git push origin pages-prod --force
+          git push origin pages-prev --force
