--- a/.github/workflows/generate_push.yml
+++ b/.github/workflows/generate_push.yml
@@ -29,8 +29,10 @@ jobs:
           MICROCMS_API_KEY: ${{ secrets.MICROCMS_API_KEY }}
           SERVICE_DOMAIN: ${{ secrets.SERVICE_DOMAIN }}
           TIMEZONE: "Asia/Tokyo"
-      - name: remove microblogen binary
-        run: rm microblogen
+      - name: remove microblogen binary & .github
+        run: |
+          rm microblogen
+          rm -rf .github
       - name: Commit & Push
         run: |
           set -x
