--- a/.github/workflows/generate_push.yml
+++ b/.github/workflows/generate_push.yml
@@ -12,11 +12,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
             ref: ${{ github.head_ref }}
-      - name: Change branch
+      - name: Change branch and reset
         run: |
           set -x
           git fetch origin pages-prev || git branch pages-prev
           git checkout -B pages-prev origin/pages-prev || git checkout -B pages-prev
+          git reset --hard origin/preview
       - uses: actions/setup-go@v5
         with:
           go-version: '>=1.23.0'
