--- a/.github/workflows/generate_article_update.yml
+++ b/.github/workflows/generate_article_update.yml
@@ -42,6 +42,9 @@ jobs:
           git add .
           git commit -m "[Prod] Deploy: $(date -u)"
           git push origin pages-prod --force
+      - name: Return to main
+        run: |
+          git checkout main
       - name: Python environment
         if: github.event.client_payload.type == 'new' || github.event.client_payload.type == 'edit'
         uses: actions/setup-python@v5
@@ -70,6 +73,7 @@ jobs:
           ref: ${{ github.head_ref }}
       - name: Change branch
         run: |
+          git checkout preview || git branch preview || { echo "Failed to switch to preview"; exit 1; }
           git fetch origin pages-prev || { echo "Failed to fetch pages-prev"; exit 1; }
           git checkout -B pages-prev origin/pages-prev || git checkout -B pages-prev || { echo "Failed to switch to pages-prev"; exit 1; }
           git reset --hard origin/preview || { echo "Failed to reset pages-prev to preview"; exit 1; }
