--- a/.github/workflows/generate_push.yml
+++ b/.github/workflows/generate_push.yml
@@ -29,7 +29,13 @@ jobs:
         env:
           MICROCMS_API_KEY: ${{ secrets.MICROCMS_API_KEY }}
           SERVICE_DOMAIN: ${{ secrets.SERVICE_DOMAIN }}
+          EXPORT_PATH: "./output"
+          RESOURCES_PATH: "./resources"
+          LATEST_ARTICLES: 5
+          ARTICLES_PER_PAGE: 10
           TIMEZONE: "Asia/Tokyo"
+          CATEGORY_TAG_NAME: "Category"
+          TIME_ARCHIVE_NAME: "Archive"
       - name: remove microblogen binary & .github
         run: |
           rm microblogen
