--- a/.github/workflows/generate_push.yml
+++ b/.github/workflows/generate_push.yml
@@ -23,7 +23,7 @@ jobs:
           go-version: '>=1.23.0'
           cache: false
       - name: Install microblogen
-        run: GOBIN=$(pwd) GOPRIVATE="github.com/Qman11010101/microblogen" go install github.com/Qman11010101/microblogen@latest
+        run: GOBIN=$(pwd) GOPRIVATE="github.com/Qman11010101/microblogen" go install github.com/Qman11010101/microblogen@2.0.0
       - name: run microblogen
         run: $(pwd)/microblogen
         env:
