--- a/.github/workflows/generate_push.yml
+++ b/.github/workflows/generate_push.yml
@@ -1,8 +1,8 @@
-name: Generate all articles when something pushed to preview
+name: Generate all articles when something pushed to prodiew
 on:
   push:
     branches:
-      - preview
+      - prodiew
 
 jobs:
   generate:
@@ -15,9 +15,9 @@ jobs:
       - name: Change branch and reset
         run: |
           set -x
-          git fetch origin pages-prev || git branch pages-prev
-          git checkout -B pages-prev origin/pages-prev || git checkout -B pages-prev
-          git reset --hard origin/preview
+          git fetch origin pages-prod || git branch pages-prod
+          git checkout -B pages-prod origin/pages-prod || git checkout -B pages-prod
+          git reset --hard origin/prodiew
       - uses: actions/setup-go@v5
         with:
           go-version: '>=1.23.0'
@@ -47,4 +47,4 @@ jobs:
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add .
           git commit -m "Deploy: $(date -u)"
-          git push origin pages-prev --force
+          git push origin pages-prod --force
